test/invalid/64371_function_zero_params/function_zero_params.agu
-- Author: 64371, Ricardo Costa

let say_hello(): Unit = "hello" -- syntax error: functions require at least one parameter

let main: Unit = say_hello()